# djag-scheduler

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  setup.cfg
djag_scheduler/: __init__.py  admin.py  apps.py  event_queue.py  managers.py  scheduler.py  tasks.py
djag_scheduler/forms/: __init__.py  periodic_task_forms.py  user_action_audit_forms.py  user_action_forms.py
djag_scheduler/migrations/: 0001_initial.py
djag_scheduler/models/: __init__.py  crontab_schedule_model.py  periodic_task_model.py  task_dependency_model.py  user_action_audit_model.py  user_action_model.py
djag_scheduler/templates/user_action/: select_action.html
djag_scheduler/templates/widgets/: exception_cron_widget.html  json_field_widget.html
djag_scheduler/widgets/: __init__.py  json_field_widget.py
