[metadata]
name = djag-scheduler
version = 1.0.0
author = Mohith Reddy
author_email = dev.m0hithreddy@gmail.com
description = 'Django database backed celery periodic task scheduler with support for task dependency graph'
long_description = file: README.md, CHANGELOG.md, AUTHORS.md
long_description_content_type = text/markdown
url = https://github.com/m0hithreddy/djag-scheduler
project_urls =
    Bug Tracker = https://github.com/m0hithreddy/djag-scheduler/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development

[options]
include_package_data = true
packages = find:
install_requires =
    Django >= 4.0.0, < 5.0.0
    celery >= 5.0.0, < 6.0.0
    croniter >= 1.0.0, < 2.0.0
    django-timezone-field >= 5.0.0, < 6.0.0
    toposort >= 1.0.0, < 2.0.0
    django-json-widget >= 1.0.0, < 2.0.0
    tzdata >= 2022.1, < 2023.0
